# c_game_engine

./: .travis.yml  LICENSE  README.md
src/: CMakeLists.txt  base.c
src/client/: CMakeLists.txt  config.h  input.c  input.h  main.c  object.c  object.h  object_ball.c  object_template.c  object_text.c  objects_render.c  objects_render.h  render.c  render.h  resources.c  resources.h  scene.c  scene.h  scene_menu.c  scene_template.c  timer.c  timer.h
src/common/: CMakeLists.txt  common.h  objects.h  uinput.c  uinput.h
src/server/: CMakeLists.txt  logic.c  logic.h  main.c
src/util/: CMakeLists.txt
